[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steroid"
version = "1.0.0"
authors = [
  { name="Mohammed Al Ameen", email="ameenmohammed2311@gmail.com" },
]
description = "Steroid"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/struckchure/steroid"
"Bug Tracker" = "https://github.com/struckchure/steroid/issues"

[tool.poetry]
name = "steroid"
version = "v1.0.0"
authors = [
  "Mohammed Al Ameen <ameenmohammed2311@gmail.com>"
]
description = "Steroid"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]