[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "steroid"
version = "v1.0.0"
authors = [
  "Mohammed Al Ameen <ameenmohammed2311@gmail.com>"
]
description = "Steroid"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
